[FIX] Fixed overflow of nav menu

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,6 +22,10 @@ a {
 	@apply font-medium text-sm;
 }
 
+#__next {
+	@apply overflow-x-hidden;
+}
+
 .swiper {
 	width: 100%;
 	height: 100%;
